[metadata]
name = find
version = 2018.11.19
url = https://github.com/looking-for-a-job/find.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = find

[options]
install_requires = 
	public
	setuptools
	values
packages = 
	find
