# https://pypi.org/project/setupcfg-generator/
[metadata]
name = find
version = 2019.3.22
url = https://github.com/looking-for-a-job/find.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = find

[options]
install_requires = 
	public
	setuptools
packages = 
	find
